# saled

./: .gitignore  README.md  environment.yml  pyproject.toml
docs/: EngineeringNotebookPritt.docx  Engineering_Notebook_Shurley.md  Hundley_EngineeringJournal_SaLT.docx  pritt_notebook.md  ziad_notebook.md
references/: finetune_whisper_atc0_all.md  load_dataset_atc0.md  py-gui-dash-mg (1).md  py-gui-dash-mr.md
src/saled/: __init__.py  __main__.py  app.py  callbacks.py
src/saled/layouts/: side_bar.py  top_bar.py  transcript_region.py
src/saled/utils/: audio.py  fileIO.py
valid/: FOIA_LC2_12Z-14Z_7-24-23-mp3.TextGrid  FOIA_LC2_12Z-14Z_7-24-23-mp3.mll  labels.toml
